manifests/ingress-janus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: janus
  labels:
    app: janus
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod  #letsencrypt-staging for testing
    cert-manager.io/cluster-issuer: letsencrypt-prod  #letsencrypt-prod for prod
    nginx.ingress.kubernetes.io/upstream-hash-by: $arg_token
    nginx.org/websocket-services: "janus"
spec:
  rules:
  - host: dev.janus.com
    http:
      paths:
      - backend:
          serviceName: janus
          servicePort: 8188
        path: /ws
      - backend:
          serviceName: janus
          servicePort: 8088
        path: /janus
  tls:
  - hosts:
    - dev.janus.com
    secretName: janus-tls
